<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">
        <TextView
            style="@style/TEXT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/login_main"
            android:textSize="30sp"
            android:textColor="@color/blue"
            android:textStyle="bold">
        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_sub"
            android:textColor="@color/gray">
        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="50dp">
            <TextView
                style="@style/TEXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textStyle="bold"
                android:layout_marginBottom="10dp">

            </TextView>
            <EditText
                style="@style/EDITTEXT"
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter Your Email"
                android:textSize="16sp"
                android:inputType="textEmailAddress"

                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="40dp">
            <TextView
                style="@style/TEXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:layout_marginBottom="10dp"
                android:textStyle="bold">

            </TextView>
            <EditText
                style="@style/EDITTEXT"
                android:id="@+id/edtPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="Enter Your Password"
                android:layout_marginBottom="10dp"
                android:textSize="16sp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">
            </EditText>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/btnForgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/forgot"
                android:clickable="true"
                android:textStyle="bold"
                android:textColor="@color/red">
            </TextView>
        </RelativeLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:background="@drawable/btn_login">

        </Button>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">
        </ProgressBar>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"

            android:layout_marginTop="30dp">
            <View
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="1dp"
                android:background="@color/gray"
                android:layout_gravity="center_vertical">
            </View>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.8"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/gray"
                android:text="@string/login_or"
                android:layout_margin="10dp">
            </TextView>
            <View
                android:layout_gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="1dp"
                android:background="@color/gray">
            </View>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal"
            android:clickable="true"
            >
<!--            <LinearLayout-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="match_parent"-->
<!--                android:layout_weight="1"-->
<!--                android:layout_marginRight="8dp"-->
<!--                android:background="@drawable/btn_login_or"-->
<!--                android:gravity="center_horizontal"-->
<!--                android:id="@+id/btnFacebook">-->
<!--                <ImageView-->
<!--                    android:layout_width="20dp"-->
<!--                    android:layout_height="match_parent"-->
<!--                    android:src="@drawable/ic_fb">-->
<!--                </ImageView>-->
<!--                <TextView-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="match_parent"-->
<!--                    android:layout_marginLeft="6dp"-->
<!--                    android:layout_marginRight="5dp"-->
<!--                    android:gravity="center_vertical"-->
<!--                    android:text="@string/facebook"-->
<!--                    android:textColor="@color/black">-->
<!--                </TextView>-->
<!--            </LinearLayout>-->

<!--            <com.facebook.login.widget.LoginButton-->
<!--                android:id="@+id/login_button"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="match_parent"-->
<!--                android:layout_gravity="center_horizontal"-->
<!--                android:layout_marginTop="30dp"-->
<!--                android:layout_marginBottom="30dp"-->
<!--                android:visibility="gone"-->
<!--                />-->


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginRight="8dp"
                android:background="@drawable/btn_login_or"
                android:gravity="center_horizontal"
                android:clickable="true"
                android:id="@+id/btnGoogle">
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_gg">
                </ImageView>
                <TextView
                    style="@style/TEXT"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/google">
                </TextView>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_not_account"
            android:layout_gravity="bottom"
            android:textColor="@color/gray">
        </TextView>
        <TextView
            android:id="@+id/btnSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@color/blue"
            android:clickable="true">
        </TextView>
    </LinearLayout>
</LinearLayout>